# box_yolo_detection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
box_yolo_detection/: detect.py  detect_on_rgbd_service.py  detect_service.py
models/: model.yaml
nodes/: detect.py
